// Users table stores Firebase user information
Table users {
  id varchar [pk]
  name varchar
  email varchar
  created_at timestamp
  updated_at timestamp
}

// Tasks table for storing task information
Table tasks {
  id serial [pk]
  title varchar
  description text
  status varchar // 'pending' or 'completed'
  user_id varchar [ref: > users.id] // Creator of the task
  created_at timestamp
  updated_at timestamp
}

// Task assignments junction table
Table task_assignments {
  task_id integer [ref: > tasks.id]
  user_id varchar [ref: > users.id]
  created_at timestamp
  
  indexes {
    (task_id, user_id) [pk]
  }
}

// Relationships
Ref: tasks.user_id > users.id
Ref: task_assignments.(task_id, user_id) > tasks.id, users.id 